--- a/website-source/_includes/_layouts/article.njk
+++ b/website-source/_includes/_layouts/article.njk
@@ -4,6 +4,8 @@ layout: base
 
 <h1>{{title}}</h1>
 
+<p>Updated: {{updated  | readableDate("dd LLLL yyyy") }}.</p>
+
 <ul>
     {% for tag in tags %}
         <li>
