--- a/website-source/article/2023-11-20-rising-sky-website-version-2/index.njk
+++ b/website-source/article/2023-11-20-rising-sky-website-version-2/index.njk
@@ -8,8 +8,6 @@
   tags: ['11ty', 'web development', 'rising sky']
 ---
 
-<p>Updated: {{updated  | readableDate("dd LLLL yyyy") }}.</p>
-
 <p>It's mid November 2023 and it's cold, crisp and sunny in <a href="#">Argyll today</a>. I'm lucky enough to
     have a few weeks
     off. I've tidied
@@ -108,6 +106,8 @@
       <li>
         <s>Code syntax styling</s>
       </li>
+      <li>Logo and Favicon</li>
+      <li>Local font for headers</li>
       <li>Basic layout - main column, logo and navigation</li>
       <li>Images page?</li>
       <li>Move to 11ty v3</li>
@@ -116,7 +116,6 @@
       Show latest photo and previous 10?
       Reduce the quality of the original photo by setting max size?
       #}
-      <li>Logo and Favicon</li>
       <li>Local fonts</li>
     </ol>
   </li>
