--- a/website-source/index.njk
+++ b/website-source/index.njk
@@ -1,20 +1,19 @@
 ---
-title: This is Rising Sky
+title: Rising Sky
 layout: base
 eleventyNavigation:
   key: <meta>
   order: 1
 ---
 
-<h1>{{title}}</h1>
+<h1>Welcome to {{title}}</h1>
 
-<p>Makes <span data-purpose>websites</span></p>
+<p>Rising Sky is a one person web development company specialising in human friendly, long lasting websites and e-learning content.</p>
 
-<p>Rising Sky is a web development studio based in Scotland.</p>
+<p>Patrick Grey is the lead/only developer and has been hacking away on the web since 2001.</p>
 
-<p>We specialise in e-learning content, web applications and motion graphic videos.</p>
+<p>Rising Sky is <a href="#">not a cult (add detail)</a>;-) .</p>
 
-<p>Patrick Grey is the lead developer and has been hacking away on the web since 2001.</p>
 
 <h2>Articles list</h2>
 {% set postlist = collections.article %}
