--- a/website-source/_includes/_layouts/article.njk
+++ b/website-source/_includes/_layouts/article.njk
@@ -4,7 +4,9 @@ layout: base
 
 <h1>{{title}}</h1>
 
-<p>Updated: {{updated  | readableDate("dd LLLL yyyy") }}.</p>
+{% if updated %}
+<p class="rs-updated">Updated: {{updated  | readableDate("dd LLLL yyyy") }}.</p>
+{% endif %}
 
 <ul>
     {% for tag in tags %}
