--- a/website-source/_includes/_layouts/small.njk
+++ b/website-source/_includes/_layouts/small.njk
@@ -4,6 +4,10 @@ layout: base
 
 <h1>{{title}}</h1>
 
+{% if updated %}
+<p class="rs-updated">Updated: {{updated  | readableDate("dd LLLL yyyy") }}.</p>
+{% endif %}
+
 <ul>
     {% for tag in tags %}
         <li>
