--- a/website-source/index.njk
+++ b/website-source/index.njk
@@ -10,7 +10,7 @@ eleventyNavigation:
 
 <p>Rising Sky is a one person web development company specialising in human friendly, long lasting websites and e-learning content.</p>
 
-<p>Patrick Grey is the lead/only developer and has been hacking away on the web since 2001.</p>
+<p>I'm Patrick Grey, the lead/only developer and have been hacking away on the web since 2001.</p>
 
 <p>Rising Sky is <a href="#">not a cult (add detail)</a>;-) .</p>
 
