--- a/website-source/css/main.css
+++ b/website-source/css/main.css
@@ -13,7 +13,7 @@
     --font-size-2: clamp(1.62rem, 1.1643rem + 2.2783vw, 2.93rem);
     --font-size-3: clamp(1.9438rem, 1.3461rem + 2.988vw, 3.6619rem);
     --font-size-4: clamp(2.3325rem, 1.5516rem + 3.9043vw, 4.5775rem);
-    --font-size-5: clamp(2.7994rem, 1.7829rem + 5.0826vw, 5.7219rem);
+    --font-size-5: clamp(2.7994rem, 1.7829rem + 5.0826vw, 7.7219rem);
 
     /* SPACE SCALE */
     --space-3xs: clamp(0.3125rem, 0.2473rem + 0.3261vw, 0.5rem);
@@ -26,10 +26,15 @@
     --space-2xl: clamp(4.5rem, 3.4565rem + 5.2174vw, 7.5rem);
     --space-3xl: clamp(6.75rem, 5.1848rem + 7.8261vw, 11.25rem);
 
+    --rs-logo-colour-grey: #666;
     --rs-logo-colour-top: #006d98;
     --rs-logo-colour-bottom: #1a3b59;
+    --rs-logo-colour-bottom-rgb: 26, 59, 89;
     --rs-transition-short: all 0.25s ease-in-out;
-    --rs-max-column-width: 70ch;
+    --rs-column-width-max: 70ch;
+    --rs-header-width-max: 140ch;
+
+    --rs-logo-max-width: 300px;
 }
 
 html,
@@ -43,6 +48,7 @@ body {
     font-family: Inter, Roboto, 'Helvetica Neue', 'Arial Nova', 'Nimbus Sans', Arial, sans-serif;
     font-weight: normal;
     font-size: var(--font-size-0);
+    color: var(--rs-logo-colour-bottom);
     background:
         linear-gradient(#c0d6fc 0%,
             #f4f7ff 30%,
@@ -50,11 +56,11 @@ body {
             #ffceaa 95%);
 }
 
-main {
-    max-width: var(--rs-max-column-width);
+/* main {
+    max-width: var(--rs-column-width-max);
     margin: 0 auto;
     padding: 0 var(--space-s);
-}
+} */
 
 footer {
     background-color: var(--rs-logo-colour-bottom);
@@ -62,7 +68,7 @@ footer {
 }
 
 footer>div {
-    max-width: var(--rs-max-column-width);
+    max-width: var(--rs-column-width-max);
     margin: var(--space-l) auto 0 auto;
     padding: var(--space-l) var(--space-s);
 }
@@ -80,7 +86,7 @@ h6 {
         source-sans-pro,
         sans-serif;
     font-weight: 800;
-    color: var(--rs-logo-colour-bottom);
+    /* color: var(--rs-logo-colour-bottom); */
     /* transform: scaleY(.85); */
     /* font-family: Inter, Roboto,
         'Helvetica Neue',
@@ -92,6 +98,9 @@ h6 {
 
 h1 {
     font-size: var(--font-size-5);
+    text-align: center;
+    margin-block-start: var(--space-xl);
+    margin-block-end: var(--space-xl);
 }
 
 h2 {
@@ -106,11 +115,43 @@ h4 {
     font-size: var(--font-size-2);
 }
 
-img {
+a {
+    text-underline-offset: 3px;
+}
+
+a[href^="#"] {
+    text-decoration: underline dashed;
+}
+
+/* img {
     width: 100%;
     max-width: 1596px;
     height: auto;
     margin: 0 auto;
+} */
+
+/*
+.##.....##.########.####.##.......####.########.####.########..######.
+.##.....##....##.....##..##........##.....##.....##..##.......##....##
+.##.....##....##.....##..##........##.....##.....##..##.......##......
+.##.....##....##.....##..##........##.....##.....##..######....######.
+.##.....##....##.....##..##........##.....##.....##..##.............##
+.##.....##....##.....##..##........##.....##.....##..##.......##....##
+..#######.....##....####.########.####....##....####.########..######.
+*/
+
+.visually-hidden:not(:focus):not(:active) {
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    height: 1px;
+    overflow: hidden;
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
+}
+
+.flow>*+* {
+    margin-block-start: var(--flow-space, 1em);
 }
 
 svg:not([width]):not([height]) {
@@ -122,13 +163,27 @@ svg:not([width]):not([height]).rs-logo {
     color: var(--rs-logo-colour);
     height: auto;
     width: 100%;
-    max-width: 300px;
+    max-width: var(--rs-logo-max-width);
 }
+
+.rs-relative {
+    position: relative;
+}
+
+/*
+.########..########..######..####..######...##....##
+.##.....##.##.......##....##..##..##....##..###...##
+.##.....##.##.......##........##..##........####..##
+.##.....##.######....######...##..##...####.##.##.##
+.##.....##.##.............##..##..##....##..##..####
+.##.....##.##.......##....##..##..##....##..##...###
+.########..########..######..####..######...##....##
+*/
 
 
 .rs-logo {
     display: block;
-    margin: var(--space-s) auto 0 auto;
+    /* margin: var(--space-s) auto 0 auto; */
     cursor: pointer;
 }
 
@@ -159,47 +214,154 @@ svg:not([width]):not([height]).rs-logo {
     }
 }
 
-nav {
-    margin: 2rem auto 3.5rem auto;
-    width: fit-content;
+/* https: //every-layout.dev/layouts/sidebar/ */
+
+header {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0 auto;
+    max-width: var(--rs-header-width-max);
+    padding-inline: var(--space-s);
+}
+
+header nav {
+    /* flex-basis: 20rem; */
+    flex-grow: 1;
+}
+
+header>a {
+    flex-basis: 0;
+    flex-grow: 999;
+    min-inline-size: calc(var(--rs-logo-max-width) + var(--space-s));
+}
+
+@media only screen and (max-width: 400px) {
+    header>a {
+        min-inline-size: 100%;
+    }
 }
 
 nav>ul {
+    position: relative;
     display: flex;
-    /* justify-content: space-between; */
     flex-wrap: wrap;
-    gap: 1.25rem 0.5rem;
     list-style: none;
-    padding: 0;
-    width: fit-content;
-    margin: 0;
+    gap: var(--space-xs);
+    padding-left: 0;
 }
 
 nav>ul li {
-    display: inline-block;
+    display: block;
+    height: fit-content;
+    /* display: inline-block; */
     /* margin-top: 1rem; */
 }
 
 nav>ul li>a:not([class]) {
     /* font-family: 'Courier New', Courier, monospace; */
-    /* font-weight: bold; */
+    display: inline-block;
+    font-family: ui-monospace, 'Cascadia Code', 'Source Code Pro', Menlo, Consolas, 'DejaVu Sans Mono', monospace;
+    font-weight: bold;
     font-size: var(--font-size-0);
     text-decoration: none;
     text-underline-offset: 5px;
     /* border: 1px solid #eee; */
-    padding: 0.5rem 0.75rem;
-    background-color: var(--rs-logo-colour-bottom);
+    padding: var(--space-2xs) var(--space-s);
+    background-color: rgba(var(--rs-logo-colour-bottom-rgb), 0.2);
     /* border: 1px solid var(--rs-logo-colour-bottom); */
-    color: white;
-    /* transition: var(--rs-transition-short); */
+    color: var(--rs-logo-colour-bottom);
+    transition: var(--rs-transition-short);
 }
 
 nav>ul li>a:not([class]):hover {
     text-decoration: underline;
     color: var(--rs-logo-colour-bottom);
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.75);
 }
 
 nav>ul li.is-active>a {
-    text-decoration: underline;
+    /* text-decoration: underline; */
+    background-color: rgba(255, 255, 255, 0.75);
+}
+
+nav>ul li>p {
+    position: absolute;
+    bottom: calc((var(--font-size--1) + var(--space-2xs) * 2) * -1);
+    left: 0;
+    font-size: var(--font-size--1);
+    color: var(--rs-logo-colour-grey);
+    opacity: 0;
+    transition: var(--rs-transition-short);
+}
+
+nav>ul li>a:hover+p {
+    opacity: 1;
+}
+
+a[href="#bio"] {
+    position: static;
+}
+
+a[href="#bio"]>span {
+    pointer-events: none;
+    visibility: hidden;
+    position: absolute;
+    left: 0;
+    top: 0;
+    overflow: hidden;
+    transform: translateY(calc(-100% - 1px));
+}
+
+a[href="#bio"]>span>img {
+    pointer-events: none;
+    width: 100%;
+    height: auto;
+    max-width: 100px;
+    transform: translate(0, 100%);
+    transition: var(--rs-transition-short);
+}
+
+a[href="#bio"]:hover>span {
+    visibility: visible;
+}
+
+a[href="#bio"]:hover>span>img {
+    transform: translate(0, 15%);
+}
+
+@media only screen and (min-width: 1400px) {
+    a[href="#bio"]>span {
+        transform: translateX(calc(-100% - 5px));
+    }
+
+    a[href="#bio"]>span>img {
+        max-width: 120px;
+        transform: rotate(0) translate(100%, 10%);
+    }
+
+    a[href="#bio"]:hover>span>img {
+        transform: rotate(-45deg) translate(30%, 10%);
+    }
+}
+
+/* /*
+/* .##..........###....##....##..#######..##.....##.########
+/* .##.........##.##....##..##..##.....##.##.....##....##...
+/* .##........##...##....####...##.....##.##.....##....##...
+/* .##.......##.....##....##....##.....##.##.....##....##...
+/* .##.......#########....##....##.....##.##.....##....##...
+/* .##.......##.....##....##....##.....##.##.....##....##...
+/* .########.##.....##....##.....#######...#######.....##...
+/* */
+
+.rs-column-header-wide {
+    margin: 0 auto;
+    max-width: var(--rs-header-width-max);
+    padding-inline: var(--space-s);
+}
+
+.rs-column {
+    margin: 0 auto;
+    max-width: var(--rs-column-width-max);
+    padding-inline: var(--space-s);
 }
