--- a/website-source/index.njk
+++ b/website-source/index.njk
@@ -6,43 +6,48 @@ eleventyNavigation:
   order: 1
 ---
 
-<h1>Welcome to {{title}}</h1>
+<div class="rs-column-header-wide"><h1>Human friendly websites</h1></div>
 
-<p>Rising Sky is a one person web development company specialising in human friendly, long lasting websites and e-learning content.</p>
+<article class="rs-column flow">
+    
+    <p class="rs-relative">Hello, <a href="#bio">I'm Patrick <span><img src="images/patrick.png" width="120" height="167" alt="Patrick smiling and waving like he's just happy to be here."></span></a>. Rising Sky is my web development company. </p>
 
-<p>I'm Patrick Grey, the lead/only developer and have been hacking away on the web since 2001.</p>
+    <p>If you need ... I can help.</p>
 
-<p>Rising Sky is <a href="#">not a cult (add detail)</a>;-) .</p>
+    <p>I specialise in human friendly, modern, durable websites, web apps and e-learning content. I've been making things for the Internet since 2001.</p>
 
-
-<h2>Articles list</h2>
-{% set postlist = collections.article %}
-{% include "post-list.njk" %}
-
-<h2>Smalls list</h2>
-{% set postlist = collections.small %}
-{% include "post-list.njk" %}
-
-<!-- node module copying? https://tjaddison.com/blog/2022/08/processing-images-linked-from-frontmatter-with-eleventy-img-to-use-in-meta-tags/ -->
-
-{# /https://www.youtube.com/watch?v=jZiZs8cZAKU #}
-<h2>Improve my accessibility skills</h2>
-
-<h2>Improve my CSS</h2>
-
-<p>CSS is high on my list as it seems to be evolving faster than the Pokemon my kids are obsessed with. There
-    are many features I'm aware of but don't understand (same with Pokemon). CSS to do list:</p>
-
-<ul>
-    <li>1</li>
-    <li>2</li>
-    <li>3</li>
-    <li>4</li>
-</ul>
-
-<h2>Web components</h2>
-
-<p>
-    <a href="https://meyerweb.com/eric/thoughts/2023/11/01/blinded-by-the-light-dom/" target="_blank">Blinded By
-        the Light DOM by Eric Baily</a> clicked with me so Web Components are added
-    to the list.</p>
+    <div id="me"></div>
+    
+    
+    <h2>Articles list</h2>
+    {% set postlist = collections.article %}
+    {% include "post-list.njk" %}
+    
+    <h2>Smalls list</h2>
+    {% set postlist = collections.small %}
+    {% include "post-list.njk" %}
+    
+    <!-- node module copying? https://tjaddison.com/blog/2022/08/processing-images-linked-from-frontmatter-with-eleventy-img-to-use-in-meta-tags/ -->
+    
+    {# /https://www.youtube.com/watch?v=jZiZs8cZAKU #}
+    <h2>Improve my accessibility skills</h2>
+    
+    <h2>Improve my CSS</h2>
+    
+    <p>CSS is high on my list as it seems to be evolving faster than the Pokemon my kids are obsessed with. There
+        are many features I'm aware of but don't understand (same with Pokemon). CSS to do list:</p>
+    
+    <ul>
+        <li>1</li>
+        <li>2</li>
+        <li>3</li>
+        <li>4</li>
+    </ul>
+    
+    <h2>Web components</h2>
+    
+    <p>
+        <a href="https://meyerweb.com/eric/thoughts/2023/11/01/blinded-by-the-light-dom/" target="_blank">Blinded By
+            the Light DOM by Eric Baily</a> clicked with me so Web Components are added
+        to the list.</p>
+</article>
