--- a/website-source/_includes/_layouts/base.njk
+++ b/website-source/_includes/_layouts/base.njk
@@ -98,7 +98,7 @@
             <div>
                 <p>🎶 This is the end...🎶</p>
                 <p>&copy; Rising Sky Ltd. 2024</p>
-                <p>Company number: </p>
+                <p>Company number: SC683321</p>
     
                 <ul>
                     {% for item in navigationFooter %}
