--- a/website-source/article/index.njk
+++ b/website-source/article/index.njk
@@ -8,7 +8,21 @@ eleventyNavigation:
   order: 2
 ---
 
-<p>This is where I keep my longer posts.</p>
+<div class="rs-column-header-wide">
+    <h1><em>Article</em> page</h1>
+</div>
 
-{% set postlist = collections.article %}
-{% include "post-list.njk" %}
+
+<article class="rs-column flow">
+
+  {% set postlist = collections.article %}
+  {% include "post-list.njk" %}
+
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem voluptatum distinctio veniam recusandae adipisci quae nulla. Eaque, molestiae iusto fugit quo quos impedit tempora commodi ex accusamus, quibusdam ea voluptates.</p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem voluptatum distinctio veniam recusandae adipisci quae nulla. Eaque, molestiae iusto fugit quo quos impedit tempora commodi ex accusamus, quibusdam ea voluptates.</p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem voluptatum distinctio veniam recusandae adipisci quae nulla. Eaque, molestiae iusto fugit quo quos impedit tempora commodi ex accusamus, quibusdam ea voluptates.</p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem voluptatum distinctio veniam recusandae adipisci quae nulla. Eaque, molestiae iusto fugit quo quos impedit tempora commodi ex accusamus, quibusdam ea voluptates.</p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem voluptatum distinctio veniam recusandae adipisci quae nulla. Eaque, molestiae iusto fugit quo quos impedit tempora commodi ex accusamus, quibusdam ea voluptates.</p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem voluptatum distinctio veniam recusandae adipisci quae nulla. Eaque, molestiae iusto fugit quo quos impedit tempora commodi ex accusamus, quibusdam ea voluptates.</p>
+
+</article>
