--- a/website-source/index.njk
+++ b/website-source/index.njk
@@ -7,20 +7,20 @@ eleventyNavigation:
 ---
 
 <div class="rs-column-header-wide">
-    <h1>Human-friendly web things</h1>
+    <h1><em>Human-friendly</em> web things</h1>
     {# <p>Websites Web Apps E-learning</p>     #}
 </div>
 
 
 <article class="rs-column flow">
-    {% include "images/rising-sky-banner.svg" %}
+    {# {% include "images/rising-sky-banner.svg" %} #}
     
-    <p class="rs-relative">Hello, <a href="#bio">I'm Patrick<span aria-hidden="true"><img src="images/patrick.png" width="120" height="167" alt="Patrick smiling and waving like he's just happy to be here."></span></a>. Rising Sky is my <strong>web development</strong> company. I've been making things for the Internet since <strong>2001</strong>. I specialise in <a href="#philosophy">human-friendly</a>, <a href="#philosophy">modern</a> and <a href="#philosophy">durable</a> <strong>websites</strong>, <strong>web apps</strong> and <strong>e-learning</strong> content. </p>
+    <p class="rs-relative">If you need...  Hello, <a href="#bio">I'm Patrick<span aria-hidden="true"><img src="images/patrick.png" width="120" height="167" alt="Patrick smiling and waving like he's just happy to be here."></span></a>. Rising Sky is my <strong>web development</strong> company. I've been making things for the Internet since <strong>2001</strong>. I specialise in <a href="#philosophy">human-friendly</a>, <a href="#philosophy">modern</a> and <a href="#philosophy">durable</a> <strong>websites</strong>, <strong>web apps</strong> and <strong>e-learning</strong> content. </p>
 
 
     <p>Whether you need <strong>content</strong> developed, <strong>analysis</strong> of the tech at your organisation or just some general <strong>advice</strong>, I can help. You can see examples of my work in the code section. Please get in touch: email, masto</p>
 
-    <p class="rs-offer">I will work for <strong>reduced rates or for free</strong> for charities, community organisations and not-for-profits.</p>
+    {# <p class="rs-offer">I will work for <strong>reduced rates or for free</strong> for charities, community organisations and not-for-profits.</p> #}
 
 
     
