--- a/website-source/small/index.njk
+++ b/website-source/small/index.njk
@@ -8,11 +8,22 @@ eleventyNavigation:
   order: 3
 ---
 
-<p>This is where I keep my shorter posts.</p>
+<div class="rs-column-header-wide">
+    <h1><em>Small</em> page</h1>
+</div>
 
-{# Small could be fixed size panels on grid with overflow and read more then on click they
-animate to the next page with transitions #}
+
+<article class="rs-column flow">
 
 {% set postlist = collections.small %}
 
 {% include "post-list.njk" %}
+
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem voluptatum distinctio veniam recusandae adipisci quae nulla. Eaque, molestiae iusto fugit quo quos impedit tempora commodi ex accusamus, quibusdam ea voluptates.</p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem voluptatum distinctio veniam recusandae adipisci quae nulla. Eaque, molestiae iusto fugit quo quos impedit tempora commodi ex accusamus, quibusdam ea voluptates.</p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem voluptatum distinctio veniam recusandae adipisci quae nulla. Eaque, molestiae iusto fugit quo quos impedit tempora commodi ex accusamus, quibusdam ea voluptates.</p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem voluptatum distinctio veniam recusandae adipisci quae nulla. Eaque, molestiae iusto fugit quo quos impedit tempora commodi ex accusamus, quibusdam ea voluptates.</p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem voluptatum distinctio veniam recusandae adipisci quae nulla. Eaque, molestiae iusto fugit quo quos impedit tempora commodi ex accusamus, quibusdam ea voluptates.</p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem voluptatum distinctio veniam recusandae adipisci quae nulla. Eaque, molestiae iusto fugit quo quos impedit tempora commodi ex accusamus, quibusdam ea voluptates.</p>
+
+</article>
