--- a/website-source/css/main.css
+++ b/website-source/css/main.css
@@ -26,29 +26,51 @@
     --space-2xl: clamp(4.5rem, 3.4565rem + 5.2174vw, 7.5rem);
     --space-3xl: clamp(6.75rem, 5.1848rem + 7.8261vw, 11.25rem);
 
-    --rs-logo-colour-grey: #666;
-    --rs-logo-colour-top: #006d98;
-    --rs-logo-colour-bottom: #1a3b59;
-    --rs-logo-colour-bottom-rgb: 26, 59, 89;
-    --rs-transition-short: all 0.25s ease-in-out;
-    --rs-column-width-max: 70ch;
-    --rs-header-width-max: 140ch;
+    --rs-font-sans: Inter,
+        Roboto,
+        'Helvetica Neue',
+        'Arial Nova',
+        'Nimbus Sans',
+        Arial,
+        sans-serif;
+    --rs-font-mono: ui-monospace,
+        'Cascadia Code',
+        'Source Code Pro',
+        Menlo,
+        Consolas,
+        'DejaVu Sans Mono',
+        monospace;
 
-    --rs-logo-max-width: 300px;
+    --rs-colour-grey: #666;
+    --rs-colour-blue-dark: #1a3b59;
+    --rs-colour-yellow: gold;
+    --rs-colour-green: #00cf56;
+    --rs-colour-red: #ff6161;
+    --rs-colour-pink: hotpink;
+
+    --rs-highlight-current: var(--rs-colour-pink);
+
+    --rs-transition-short: all 0.25s ease-in-out;
+
+    --rs-width-max-column: 70ch;
+    --rs-width-max-header: 140ch;
+
+    --rs-width-max-logo: 280px;
 }
 
 html,
 body {
     margin: 0;
     padding: 0;
+    scrollbar-width: auto;
 }
 
 body {
     /* font-family: Bahnschrift, 'DIN Alternate', 'Franklin Gothic Medium', 'Nimbus Sans Narrow', sans-serif-condensed, sans-serif; */
-    font-family: Inter, Roboto, 'Helvetica Neue', 'Arial Nova', 'Nimbus Sans', Arial, sans-serif;
+    font-family: var(--rs-font-sans);
     font-weight: normal;
     font-size: var(--font-size-0);
-    color: var(--rs-logo-colour-bottom);
+    color: var(--rs-colour-blue-dark);
     background:
         linear-gradient(#c0d6fc 0%,
             #f4f7ff 30%,
@@ -56,19 +78,18 @@ body {
             #ffceaa 95%);
 }
 
-/* main {
-    max-width: var(--rs-column-width-max);
-    margin: 0 auto;
-    padding: 0 var(--space-s);
-} */
+*::selection {
+    color: var(--rs-colour-yellow);
+    background-color: var(--rs-colour-blue-dark);
+}
 
 footer {
-    background-color: var(--rs-logo-colour-bottom);
+    background-color: var(--rs-colour-blue-dark);
     color: white;
 }
 
 footer>div {
-    max-width: var(--rs-column-width-max);
+    max-width: var(--rs-width-max-column);
     margin: var(--space-l) auto 0 auto;
     padding: var(--space-l) var(--space-s);
 }
@@ -79,29 +100,198 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: 'Rubik', Avenir,
-        Montserrat,
-        Corbel,
-        'URW Gothic',
-        source-sans-pro,
-        sans-serif;
+    font-family: var(--rs-font-sans);
     font-weight: 800;
     text-wrap: balance;
-    /* color: var(--rs-logo-colour-bottom); */
-    /* transform: scaleY(.85); */
-    /* font-family: Inter, Roboto,
-        'Helvetica Neue',
-        'Arial Nova',
-        'Nimbus Sans',
-        Arial,
-        sans-serif; */
 }
 
 h1 {
     font-size: var(--font-size-5);
     text-align: center;
     margin-block-start: var(--space-l);
-    margin-block-end: var(--space-l);
+    margin-block-end: var(--space-xl);
+}
+
+/*
+##    ##    ###    ##     ##
+###   ##   ## ##   ##     ##
+####  ##  ##   ##  ##     ##
+## ## ## ##     ## ##     ##
+##  #### #########  ##   ##
+##   ### ##     ##   ## ##
+##    ## ##     ##    ###
+*/
+
+.rs-skip {
+    text-align: center;
+    background-color: white;
+    display: grid;
+    position: relative;
+    grid-template-rows: 0fr;
+    transition: grid-template-rows 0.25s ease-in-out;
+}
+
+.rs-skip:focus-within {
+    grid-template-rows: 1fr;
+}
+
+.rs-skip>p {
+    overflow: hidden;
+    margin: 0;
+}
+
+.rs-skip>p>a {
+    display: inline-block;
+    padding-block: 1rem;
+}
+
+.rs-skip::after {
+    content: "";
+    width: 0px;
+    height: 0px;
+    border-style: solid;
+    border-width: var(--space-2xs) var(--space-2xs) 0 var(--space-2xs);
+    border-color: white transparent transparent transparent;
+    position: absolute;
+    left: 50%;
+    bottom: calc(var(--space-2xs) * -1);
+    transform: translateX(-50%);
+    pointer-events: none;
+    opacity: 0;
+}
+
+.rs-skip:focus-within::after {
+    opacity: 1;
+}
+
+nav>ul {
+    font-family: var(--rs-font-mono);
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+    gap: var(--space-xs);
+    padding-left: 0;
+}
+
+nav>ul>li {
+    display: block;
+    height: fit-content;
+}
+
+nav>ul>li>a {
+    position: relative;
+    display: inline-block;
+    font-weight: bold;
+    font-size: var(--font-size-0);
+    text-decoration: none;
+    padding: var(--space-2xs) var(--space-s);
+    padding-block-end: calc(var(--space-xs) - 5px);
+    color: var(--rs-colour-blue-dark);
+    background-color: rgba(255, 255, 255, 0.3);
+    transition: var(--rs-transition-short);
+    border-block-end-style: solid;
+    border-block-end-width: var(--space-2xs);
+}
+
+html:has(nav>ul>li.is-active>a[href="/article/"]) {
+    --rs-highlight-current: var(--rs-colour-green);
+}
+
+html:has(nav>ul>li.is-active>a[href="/small/"]) {
+    --rs-highlight-current: var(--rs-colour-yellow);
+}
+
+html:has(nav>ul>li.is-active>a[href="/code/"]) {
+    --rs-highlight-current: var(--rs-colour-red);
+}
+
+html,
+body {
+    scrollbar-color: var(--rs-colour-blue-dark) var(--rs-highlight-current);
+}
+
+nav>ul>li>a[href="/"] {
+    border-block-end-color: var(--rs-colour-pink);
+}
+
+nav>ul>li>a[href="/article/"] {
+    border-block-end-color: var(--rs-colour-green);
+}
+
+nav>ul>li>a[href="/small/"] {
+    border-block-end-color: var(--rs-colour-yellow);
+}
+
+nav>ul>li>a[href="/code/"] {
+    border-block-end-color: var(--rs-colour-red);
+}
+
+nav>ul>li>a:hover {
+    background-color: white;
+    /* text-decoration: underline; */
+
+    /* color: var(--rs-colour-blue-dark); */
+    /* background-color: rgba(255, 255, 255, 0.75); */
+}
+
+nav>ul>li.is-active>a {
+    background-color: white;
+}
+
+nav>ul>li.is-active>a::after {
+    content: "";
+    width: 0px;
+    height: 0px;
+    border-style: solid;
+    border-width: 0 var(--space-2xs) var(--space-2xs) var(--space-2xs);
+    border-color: transparent transparent var(--rs-highlight-current) transparent;
+    position: absolute;
+    left: 50%;
+    bottom: 0;
+    transform: translateX(-50%);
+    /* transform: rotate(0deg); */
+    /* text-decoration: underline; */
+    /* background-color: white; */
+    /* background-color: var(--rs-colour-blue-dark);
+    color: var(--rs-colour-yellow); */
+}
+
+nav>ul>li>p {
+    position: absolute;
+    bottom: calc((var(--font-size--1) + var(--space-2xs) * 2) * -1);
+    left: 0;
+    font-size: var(--font-size--1);
+    color: var(--rs-colour-grey);
+    opacity: 0;
+    transition: var(--rs-transition-short);
+}
+
+nav>ul>li>a:hover+p {
+    opacity: 1;
+}
+
+/*
+##     ## ########    ###    ########  ######## ########
+##     ## ##         ## ##   ##     ## ##       ##     ##
+##     ## ##        ##   ##  ##     ## ##       ##     ##
+######### ######   ##     ## ##     ## ######   ########
+##     ## ##       ######### ##     ## ##       ##   ##
+##     ## ##       ##     ## ##     ## ##       ##    ##
+##     ## ######## ##     ## ########  ######## ##     ##
+*/
+
+h1>em {
+    --rs-h1-gradient-start: 26%;
+    --rs-h1-gradient-end: 75%;
+    background-image: linear-gradient(to bottom,
+            transparent var(--rs-h1-gradient-start),
+            var(--rs-highlight-current) var(--rs-h1-gradient-start),
+            var(--rs-highlight-current) var(--rs-h1-gradient-end),
+            transparent var(--rs-h1-gradient-end),
+            transparent 100%);
+    padding-right: 0.25rem;
+    font-style: normal;
 }
 
 @media only screen and (min-width: 800px) {
@@ -130,13 +320,6 @@ a[href^="#"] {
     text-decoration: underline dotted;
 }
 
-/* img {
-    width: 100%;
-    max-width: 1596px;
-    height: auto;
-    margin: 0 auto;
-} */
-
 /*
 .##.....##.########.####.##.......####.########.####.########..######.
 .##.....##....##.....##..##........##.....##.....##..##.......##....##
@@ -161,16 +344,17 @@ a[href^="#"] {
     margin-block-start: var(--flow-space, 1em);
 }
 
+/* Change this to line height? */
 svg:not([width]):not([height]) {
     height: 1.5ex;
     width: auto;
 }
 
 svg:not([width]):not([height]).rs-logo {
-    color: var(--rs-logo-colour);
+    color: var(--rs-colour-logo);
     height: auto;
     width: 100%;
-    max-width: var(--rs-logo-max-width);
+    max-width: var(--rs-width-max-logo);
 }
 
 .rs-relative {
@@ -178,38 +362,50 @@ svg:not([width]):not([height]).rs-logo {
 }
 
 /*
-.########..########..######..####..######...##....##
-.##.....##.##.......##....##..##..##....##..###...##
-.##.....##.##.......##........##..##........####..##
-.##.....##.######....######...##..##...####.##.##.##
-.##.....##.##.............##..##..##....##..##..####
-.##.....##.##.......##....##..##..##....##..##...###
-.########..########..######..####..######...##....##
+##        #######   ######    #######
+##       ##     ## ##    ##  ##     ##
+##       ##     ## ##        ##     ##
+##       ##     ## ##   #### ##     ##
+##       ##     ## ##    ##  ##     ##
+##       ##     ## ##    ##  ##     ##
+########  #######   ######    #######
 */
 
 
 .rs-logo {
     display: block;
-    /* margin: var(--space-s) auto 0 auto; */
     cursor: pointer;
 }
 
 .rs-logo svg circle[data-id="rs-sun"] {
     transform: translate(0, 0);
     transition: var(--rs-transition-short);
+    fill: var(--rs-highlight-current);
 }
 
 /* https: //stackoverflow.com/questions/26675099/on-hover-change-svg-from-colour-to-gradient-with-a-transition */
-.rs-logo svg stop {
+.rs-logo svg stop,
+.rs-logo:hover svg g[data-id="rs-sun-cloud"] {
     transition: var(--rs-transition-short);
 }
 
 .rs-logo:hover svg stop:first-child {
-    stop-color: #009dda;
+    stop-color: var(--rs-highlight-current);
 }
 
 .rs-logo:hover svg circle[data-id="rs-sun"] {
     transform: translate(45px, -25px);
+    transition: var(--rs-transition-short);
+}
+
+.rs-logo svg g[data-id="rs-sun-cloud"] {
+    transform: translateY(0);
+    transition: var(--rs-transition-short);
+}
+
+.rs-logo:hover svg g[data-id="rs-sun-cloud"] {
+    transform: translateY(-10%);
+    transition: var(--rs-transition-short);
 }
 
 @media (prefers-reduced-motion: reduce) {
@@ -227,7 +423,7 @@ header {
     display: flex;
     flex-wrap: wrap;
     margin: 0 auto;
-    max-width: var(--rs-header-width-max);
+    max-width: var(--rs-width-max-header);
     padding-inline: var(--space-s);
 }
 
@@ -239,7 +435,7 @@ header nav {
 header>a {
     flex-basis: 0;
     flex-grow: 999;
-    min-inline-size: calc(var(--rs-logo-max-width) + var(--space-s));
+    min-inline-size: calc(var(--rs-width-max-logo) + var(--space-s));
 }
 
 @media only screen and (max-width: 400px) {
@@ -248,62 +444,6 @@ header>a {
     }
 }
 
-nav>ul {
-    position: relative;
-    display: flex;
-    flex-wrap: wrap;
-    list-style: none;
-    gap: var(--space-xs);
-    padding-left: 0;
-}
-
-nav>ul li {
-    display: block;
-    height: fit-content;
-    /* display: inline-block; */
-    /* margin-top: 1rem; */
-}
-
-nav>ul li>a:not([class]) {
-    /* font-family: 'Courier New', Courier, monospace; */
-    display: inline-block;
-    font-family: ui-monospace, 'Cascadia Code', 'Source Code Pro', Menlo, Consolas, 'DejaVu Sans Mono', monospace;
-    font-weight: bold;
-    font-size: var(--font-size-0);
-    text-decoration: none;
-    text-underline-offset: 5px;
-    /* border: 1px solid #eee; */
-    padding: var(--space-2xs) var(--space-s);
-    background-color: rgba(var(--rs-logo-colour-bottom-rgb), 0.2);
-    /* border: 1px solid var(--rs-logo-colour-bottom); */
-    color: var(--rs-logo-colour-bottom);
-    transition: var(--rs-transition-short);
-}
-
-nav>ul li>a:not([class]):hover {
-    text-decoration: underline;
-    color: var(--rs-logo-colour-bottom);
-    background-color: rgba(255, 255, 255, 0.75);
-}
-
-nav>ul li.is-active>a {
-    /* text-decoration: underline; */
-    background-color: rgba(255, 255, 255, 0.75);
-}
-
-nav>ul li>p {
-    position: absolute;
-    bottom: calc((var(--font-size--1) + var(--space-2xs) * 2) * -1);
-    left: 0;
-    font-size: var(--font-size--1);
-    color: var(--rs-logo-colour-grey);
-    opacity: 0;
-    transition: var(--rs-transition-short);
-}
-
-nav>ul li>a:hover+p {
-    opacity: 1;
-}
 
 a[href="#bio"] {
     position: static;
@@ -365,48 +505,42 @@ a[href="#bio"]:hover>span>img {
 
 .rs-offer {
     position: relative;
-    width: 60%;
+    width: 70%;
     margin: 0 auto;
-    background-color: var(--rs-logo-colour-bottom);
+    background-color: var(--rs-colour-blue-dark);
     color: white;
     text-align: center;
     margin-block-start: var(--space-xl);
     margin-block-end: var(--space-2xl);
-    transform: rotate(-5deg);
-    padding: var(--space-2xs) var(--space-2xs);
-    border-radius: 10px;
+    /* transform: rotate(-5deg); */
+    padding: var(--space-s) var(--space-s);
+    /* border-radius: 10px; */
     text-wrap: balance;
     /* box-shadow: inset 0 0 10px #05C7F2, 0 0 20px #05C7F2; */
-    border: 2px solid white;
+    /* border: 2px solid white; */
+    --rs-offer-zig: 8px;
+    --rs-offer-zag: calc(8px * 2);
+    --mask:
+        linear-gradient(#000 0 0) center/calc(100% - var(--rs-offer-zag)) calc(100% - var(--rs-offer-zag)) no-repeat,
+        conic-gradient(from 135deg at top, #0000, #000 1deg 89deg, #0000 90deg) 0 0 /var(--rs-offer-zag) var(--rs-offer-zig) space no-repeat,
+        conic-gradient(from -45deg at bottom, #0000, #000 1deg 89deg, #0000 90deg) 0 100%/var(--rs-offer-zag) var(--rs-offer-zig) space no-repeat,
+        conic-gradient(from 45deg at left, #0000, #000 1deg 89deg, #0000 90deg) 0 0 /var(--rs-offer-zig) var(--rs-offer-zag) no-repeat space,
+        conic-gradient(from -135deg at right, #0000, #000 1deg 89deg, #0000 90deg) 100% 0/var(--rs-offer-zig) var(--rs-offer-zag) no-repeat space;
+    -webkit-mask: var(--mask);
+    mask: var(--mask);
 }
 
-.rs-offer::before,
-.rs-offer::after {
-    content: "";
-    background-image: url(../images/rs-offer-star.svg);
-    background-repeat: no-repeat;
-    display: block;
-    width: 80px;
-    height: 80px;
-    position: absolute;
-    /* top: 50%; */
-    color: var(--rs-logo-colour-bottom);
-    /* filter: drop-shadow(0 0 20px #05C7F2); */
-    /* border: 2px solid #05AFF2; */
-    z-index: -1;
-    /* transform: translateY(-50%); */
-}
-
-.rs-offer::before {
-    top: 50%;
-    left: 0;
-    transform: translate(-50%, -50%);
-}
-
-.rs-offer::after {
-    top: 50%;
-    right: 0;
-    transform: translate(50%, -50%);
+.rs-rainbow-top {
+    border-top: var(--space-xs) solid transparent;
+    border-image: linear-gradient(89.7deg,
+            rgba(223, 0, 0, 1) 2.7%,
+            rgba(225, 182, 0) 15.1%,
+            rgba(233, 245, 0, 1) 29.5%,
+            rgba(23, 255, 17, 1) 45.8%,
+            rgba(29, 255, 255, 1) 61.5%,
+            rgba(5, 17, 255, 1) 76.4%,
+            rgba(202, 0, 253, 1) 92.4%);
+    border-image-slice: 1;
 }
 
 /* /*
@@ -421,12 +555,16 @@ a[href="#bio"]:hover>span>img {
 
 .rs-column-header-wide {
     margin: 0 auto;
-    max-width: var(--rs-header-width-max);
+    max-width: var(--rs-width-max-header);
     padding-inline: var(--space-s);
 }
 
 .rs-column {
     margin: 0 auto;
-    max-width: var(--rs-column-width-max);
+    max-width: var(--rs-width-max-column);
     padding-inline: var(--space-s);
+}
+
+.rs-column.rs-rainbow-top {
+    padding-block-start: var(--space-m);
 }
