--- a/website-source/reading-list.njk
+++ b/website-source/reading-list.njk
@@ -339,5 +339,28 @@ Hide #}
 
 12/03 https://benmyers.dev/blog/captions-and-subtitles/
 
+    <h2>Improve my accessibility skills</h2>
+    
+    <h2>Improve my CSS</h2>
+    
+    <p>CSS is high on my list as it seems to be evolving faster than the Pokemon my kids are obsessed with. There
+        are many features I'm aware of but don't understand (same with Pokemon). CSS to do list:</p>
+    
+    <ul>
+        <li>1</li>
+        <li>2</li>
+        <li>3</li>
+        <li>4</li>
+    </ul>
+    
+    <h2>Web components</h2>
+    
+    <p>
+        <a href="https://meyerweb.com/eric/thoughts/2023/11/01/blinded-by-the-light-dom/" target="_blank">Blinded By
+            the Light DOM by Eric Baily</a> clicked with me so Web Components are added
+        to the list.</p>
+ <!-- node module copying? https://tjaddison.com/blog/2022/08/processing-images-linked-from-frontmatter-with-eleventy-img-to-use-in-meta-tags/ -->
+    
+    https://www.youtube.com/watch?v=jZiZs8cZAKU 
 
  #}
