--- a/website-source/_includes/_layouts/base.njk
+++ b/website-source/_includes/_layouts/base.njk
@@ -101,7 +101,7 @@
 
             <div>
                 <nav>
-                    <ul>
+                    <ul class="rs-switcher">
                         {% for item in navigationFooter %}
                             <li>
                                 <a href="{{ item.url }}">{{ item.label }}</a>
